--- a/site/index.html
+++ b/site/index.html
@@ -347,6 +347,7 @@
 <p>This is very wasteful, and felt like an easy thing to start fixing. </p>
 <h2 id="about-me">About Me</h2>
 <p>2 years in Medical Imaging startup, now working in AI for Waste Management / Recycling. </p>
+<p>Tutorials have been written with a lot of help from Jack Tattershall (https://www.linkedin.com/in/jack-tattershall-9bb972190). A very old friend who meandered his way to Computer Vision alongside me.</p>
 
 
 
