added more to intro

--- a/site/index.html
+++ b/site/index.html
@@ -345,6 +345,8 @@
 <h2 id="motivation">Motivation</h2>
 <p>The detectron2 API is incredible, but the documentation and response to GitHub issues are incredibly bad. </p>
 <p>This is very wasteful, and felt like an easy thing to start fixing. </p>
+<p>Between a lot of different GitHub issues and Stack discussions, a lot of the problems contained here were already solved, but a lot of time had to be put into searching Google in order to find those, parse what you cared about and implement the solutions. This is meant to be a one stop shop.</p>
+<p>(Note I'd love to upstream this content to the original Detectron2 docs if they'd allow it, but for the timebeing this will do)</p>
 <h2 id="about-me">About Me</h2>
 <p>2 years in Medical Imaging startup, now working in AI for Waste Management / Recycling. </p>
 <p>Tutorials have been written with a lot of help from Jack Tattershall (https://www.linkedin.com/in/jack-tattershall-9bb972190). A very old friend who meandered his way to Computer Vision alongside me.</p>
